[package]
name = "moku1"
version = "0.1.0"
authors = ["tobisakomd <tobisako@minden.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
cgmath = "0.17.0"

[dev-dependencies]
cgmath = { version = "0.17", features = ["mint"]}
