[package]
name = "lazy2"
version = "0.1.0"
authors = ["tobisakomd <tobisako@minden.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
toml = "0.5.6"
serde = "1.0.113"
serde_derive = "1.0.113"
