[package]
name = "iced1"
version = "0.1.0"
authors = ["tobisako <tobisako@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["image", "async-std"] }
iced_native = "0.2.2"
iced_futures = "0.1.2"
async-std = { version = "1.6.1", features = ["unstable"] }

